-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.4.2, Qt Creator 3.5.0-beta1
-
Windows 7 64 bit
- Open the minehunt demo project
from an old Qt4 SDK in Creator using its pro-file.
- In Projects view, right-click minehunt.qml and select "Rename..." from the context menu.
- Enter a different name for the file, e.g. "other.qml".
Creator will rename the file and display an error message about failed changes to the pro-file. The qml file disappears from the Projects view.
Ideally, Creator should be able to update the pro file. If this is not possible for a valid reason, Creator should not rename the file at all.
Found when experimenting with Squish test tst_rename_file.